@@ -1827,6 +1827,7 @@ sp-upgrade-grobgnum-acrosphere=Upgrade grobgnum acrosphere
 sp-upgrade-rukite-acrosphere=Upgrade rukite acrosphere
 sp-upgrade-yemnuth-acrosphere=Upgrade yemnuth acrosphere
 sp-uranium-233-processing=Uranium 233 processing
+sp-uranium-233-with-plutonium-processing=Uranium 233 with plutonium processing
 sp-uranium-from-acrovoid=Uranium from acrovoid
 sp-uranium-fuel-rod=Uranium fuel rod
 sp-uranium-oxide=Uranium oxide
